fix(ci): align Node 22 e2e flow with IPv4 localhost

--- a/src/platform/forms/sass/_m-schemaform.scss
+++ b/src/platform/forms/sass/_m-schemaform.scss
@@ -87,7 +87,7 @@ dl.review {
     column-gap: 0.9375rem;
     > dd {
       font-weight: bold;
-      @media (min-width: $xsmall-screen) {
+      @media (min-width: #{variables.$xsmall-screen}) {
         text-align: right;
       }
     }
@@ -95,7 +95,7 @@ dl.review {
       margin-top: 0;
       margin-bottom: 0;
     }
-    @media (min-width: $xsmall-screen) {
+    @media (min-width: #{variables.$xsmall-screen}) {
       flex-direction: row;
     }
   }
@@ -119,7 +119,7 @@ dl.review-auto-margin {
       margin-top: 0;
       margin-bottom: 0;
     }
-    @media (min-width: $small-screen) {
+    @media (min-width: #{variables.$small-screen}) {
       flex-direction: row;
       > dd {
         padding-left: 5px;
@@ -230,7 +230,7 @@ label {
 }
 
 .schemaform-array-row-title:focus {
-  @include focus-gold-light-outline;
+  @include mixins.focus-gold-light-outline();
   display: inline-block;
 }
 
@@ -740,7 +740,7 @@ va-checkbox.statement-of-truth-va-checkbox::part(checkbox) {
   .rjsf-web-component-field.#{$element}::part(header) {
     font-size: $desktop-font-size;
 
-    @media (max-width: $small-screen) {
+    @media (max-width: #{variables.$small-screen}) {
       font-size: $mobile-font-size;
     }
   }
